2005-02-24	Benedikt Meurer <benny@xfce.org>

	* settings/splash/module.c(module_test): Call start() if provided by
	  a splash engine, so engine developers can properly test their
	  modules.

2005-01-27	Benedikt Meurer <benny@xfce.org>

	* Removed autogenerated files from CVS.
	* Fixed bug #734 by depending on libgnome-2.0, rather than
	  gconf, which pulls in the required path settings.
