@@ -1,3 +1,8 @@
+2005-03-17	Benedikt Meurer <benny@xfce.org>
+
+	* settings/splash/module.c(module_test): Properly initialize the
+	  engine structure with zero.
+
 2005-02-24	Benedikt Meurer <benny@xfce.org>
 
 	* settings/splash/module.c(module_test): Call start() if provided by
